fix: FAQ q/a spacing

--- a/src/components/AccordionGroup/AccordionGroup.module.scss
+++ b/src/components/AccordionGroup/AccordionGroup.module.scss
@@ -33,20 +33,14 @@
   align-items: center;
   text-align: start;
   cursor: pointer;
-  padding: 0;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  padding: 0.5rem 0;
   display: flex;
   border: none;
   width: 100%;
   font-weight: 600;
   
-  &:hover {
-    background-color: colors.getColor(primary-700, $alpha: 0.06);
-  }
-
-  &:active {
-    background-color: colors.getColor(primary-700, $alpha: 0.12);
+  &:hover, &:active {
+    background-color: colors.getColor(primary-500, $alpha: 0.15);
   }
 }
 
@@ -93,7 +87,7 @@
 
 .content {
   overflow: hidden;
-  margin: 0 0.5rem;
+  margin: 0;
 }
 
 .text {
